исправляет баги валидности

--- a/source/pug/faq.pug
+++ b/source/pug/faq.pug
@@ -17,8 +17,8 @@ block content
 			.faq__accordion.accordion.accordion--black
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>01.</span> Return option
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>01.</span> Return option
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -26,8 +26,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>02.</span> How to select price?
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>02.</span> How to select price?
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -35,8 +35,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>03.</span> Terms of us
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>03.</span> Terms of us
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -44,8 +44,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>04.</span> Shipping
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>04.</span> Shipping
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -53,8 +53,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>05.</span> Paypall
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>05.</span> Paypall
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -62,8 +62,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>06.</span> Delivery
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>06.</span> Delivery
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -71,8 +71,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>07.</span> Money back
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>07.</span> Money back
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
