--- a/source/pug/modules/footer.pug
+++ b/source/pug/modules/footer.pug
@@ -37,14 +37,8 @@ footer.footer.__js_fixed-footer
 								span.field__hint E-mail
 							button.footer__feedback-send.arrow-btn.arrow-btn--size-large(type="button")
 								+icon('link-arrow')(width="75", height="75")
-						.footer__feedback-notice This site is protected by reCAPTHCHA and the <a href="#", target="_blank">Google Privacy Policy</a> and <a href="#", target="_blank">Terms of Service apply</a>.
+						.footer__feedback-notice This site is protected by reCAPTHCHA and the <a href="#" target="_blank">Google Privacy Policy</a> and <a href="#" target="_blank">Terms of Service apply</a>.
 					.footer__bottom.col-12
 						.footer__copyright © Centrix  2021. All Rights Resevered
 						a.footer__privacy(href="#") Privacy Policy
-
-
-
-
-				//+social('footer__social', ['facebook', 'twitter', 'google-plus', 'linkedin-original'])
-
 
