--- a/source/pug/service-detail.pug
+++ b/source/pug/service-detail.pug
@@ -70,8 +70,8 @@ block content
 			.service-detail__accordion.accordion.accordion--black
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>01.</span> Planing
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>01.</span> Planing
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -79,8 +79,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>02.</span> Design
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>02.</span> Design
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -88,8 +88,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>03.</span> Concept
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>03.</span> Concept
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -97,8 +97,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>04.</span> Coding
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>04.</span> Coding
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -106,8 +106,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>05.</span> CMS
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>05.</span> CMS
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
@@ -115,8 +115,8 @@ block content
 
 				.accordion__item(data-aos="fade-up")
 					button.accordion__item-header(type="button")
-						.row.align-items-md-center
-							.accordion__item-title.col-11.col-md-6 <span>06.</span> End
+						span.row.align-items-md-center
+							span.accordion__item-title.col-11.col-md-6 <span>06.</span> End
 					.accordion__item-body
 						.row
 							.accordion__item-left.col-12.col-md-7
