--- a/source/pug/single-post.pug
+++ b/source/pug/single-post.pug
@@ -57,7 +57,7 @@ block content
 			.container.container--small
 				.single-post__gallery
 					.single-post__gallery-col(data-aos="fade-up")
-						piscture
+						picture
 							source(type="image/webp", srcset="img/picture/news/post/post-2.webp 1x, img/picture/news/post/post-2@2x.webp 2x")
 							img(src="img/picture/news/post/post-2.jpg", srcset="img/picture/news/post/post-2@2x.jpg 2x", width="540", height="302", alt="")
 						picture
