--- a/source/pug/about-us.pug
+++ b/source/pug/about-us.pug
@@ -42,9 +42,9 @@ block content
 				.our-services__accordion.accordion
 					.accordion__item(data-aos="fade-up")
 						button.accordion__item-header(type="button")
-							.row.align-items-md-center
-								.accordion__item-title.col-11.col-md-6 Design
-								.accordion__item-short.col-11.col-md-5 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
+							span.row.align-items-md-center
+								span.accordion__item-title.col-11.col-md-6 Design
+								span.accordion__item-short.col-11.col-md-5 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
@@ -62,9 +62,9 @@ block content
 
 					.accordion__item(data-aos="fade-up")
 						button.accordion__item-header(type="button")
-							.row.align-items-md-center
-								.accordion__item-title.col-11.col-md-6 Development
-								.accordion__item-short.col-11.col-md-5 We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design.
+							span.row.align-items-md-center
+								span.accordion__item-title.col-11.col-md-6 Development
+								span.accordion__item-short.col-11.col-md-5 We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design.
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
@@ -82,9 +82,9 @@ block content
 
 					.accordion__item(data-aos="fade-up")
 						button.accordion__item-header(type="button")
-							.row.align-items-md-center
-								.accordion__item-title.col-11.col-md-6 Graphic
-								.accordion__item-short.col-11.col-md-5 We use all opportunities to solve business problems. Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
+							span.row.align-items-md-center
+								span.accordion__item-title.col-11.col-md-6 Graphic
+								span.accordion__item-short.col-11.col-md-5 We use all opportunities to solve business problems. Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
@@ -102,9 +102,9 @@ block content
 
 					.accordion__item(data-aos="fade-up")
 						button.accordion__item-header(type="button")
-							.row.align-items-md-center
-								.accordion__item-title.col-11.col-md-6 Wordpress
-								.accordion__item-short.col-11.col-md-5 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
+							span.row.align-items-md-center
+								span.accordion__item-title.col-11.col-md-6 Wordpress
+								span.accordion__item-short.col-11.col-md-5 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
