--- a/source/pug/contact.pug
+++ b/source/pug/contact.pug
@@ -41,7 +41,7 @@ block content
 									span.field__hint Message*
 								+btn(true, 'Submit', '', 'btn--black contact-section__send')(type="submit", data-aos="fade-up")
 			.contact-section__map(data-aos="fade-up")
-				iframe(src='https://yandex.ru/map-widget/v1/?um=constructor%3A351063e7db352f0133fe8dca1724bd5b8208d2a14e4ca511a12b61acfa0179d0&source=constructor' width='100%' height='100%' frameborder='0')
+				iframe(src='https://yandex.ru/map-widget/v1/?um=constructor%3A351063e7db352f0133fe8dca1724bd5b8208d2a14e4ca511a12b61acfa0179d0&source=constructor')
 
 
 
