--- a/source/pug/modules/creative-hero.pug
+++ b/source/pug/modules/creative-hero.pug
@@ -6,5 +6,5 @@ section.creative-hero
 			+btn(false, 'Join now', url = '#', cl = 'creative-hero__btn')
 		.creative-hero__image
 			picture
-				source(type="image/webp", srcset="img/picture/creative/hero.webp 1x, img/picture/creative/hero@2x.webp")
+				source(type="image/webp", srcset="img/picture/creative/hero.webp 1x, img/picture/creative/hero@2x.webp 2x")
 				img(src="img/picture/creative/hero.jpg", srcset="img/picture/creative/hero@2x.jpg 2x", width="1100", height="980", alt="")
