--- a/source/scss/blocks/contact-section.scss
+++ b/source/scss/blocks/contact-section.scss
@@ -4,6 +4,7 @@
 	@include media(md) {
 		padding: 120px 0;
 	}
+
 	@include media(lg) {
 		padding: 220px 0;
 	}
@@ -150,6 +151,12 @@
 	&__map {
 		height: 300px;
 		margin-top: 40px;
+
+		iframe {
+			width: 100%;
+			height: 100%;
+			border: none;
+		}
 
 		@include media(md) {
 			height: 400px;
