--- a/source/pug/single-post.pug
+++ b/source/pug/single-post.pug
@@ -77,7 +77,7 @@ block content
 					p One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in the future. The same is true as we experience
 						|  the emotional sensation of stress from our first instances of social rejection or ridicule. We quickly learn to fear and thus
 						|  automatically avoid potentially stressful situations of all kinds, including the most common of all: making mistakes.
-				.single-post__nav
+				.single-post__nav(data-aos="fade-up")
 					.single-post__tags(data-aos="fade-up") <b>Tags:</b> Inspiration, Workspace, Minimal, Decoation
 					.single-post__share(data-aos="fade-up")
 						b Share:
