--- a/source/pug/modules/start-project.pug
+++ b/source/pug/modules/start-project.pug
@@ -38,5 +38,5 @@ section.start-project
 							//-.col-auto
 							picture
 								source(type="image/webp" srcset="img/picture/partners/" + (i + 1) + ".webp 1x, img/picture/partners/" + (i + 1) + "@2x.webp 2x")
-								img(src="img/picture/partners/" + (i + 1) + ".jpg", srcset="img/picture/partners/" + (i + 1) + "@2x.jpg 2x", width= PARTNERS_LOGO[i].w, height= PARTNERS_LOGO[i].h, alt= PARTNERS_LOGO[i].alt)
+								img(src="img/picture/partners/" + (i + 1) + ".png", srcset="img/picture/partners/" + (i + 1) + "@2x.png 2x", width= PARTNERS_LOGO[i].w, height= PARTNERS_LOGO[i].h, alt= PARTNERS_LOGO[i].alt)
 						- i++;
