--- a/source/pug/modules/vcard.pug
+++ b/source/pug/modules/vcard.pug
@@ -11,8 +11,8 @@ article.vcard
 			.col-12.col-sm-3.align-self-end.text-right
 				+arrow-link('Portfolio', URLS.projects.masonry, 'about-mamber__more arrow-link--theme-yellow')(data-aos="fade-up")
 
-		.vcard__main
-			.vcard__great(data-aos="fade-up") Hi! My name is Scott Patterson. I have accumulated 7 <br>years of experience in graphic and web design,
+		.vcard__main(data-aos="fade-up")
+			.vcard__great Hi! My name is Scott Patterson. I have accumulated 7 <br>years of experience in graphic and web design,
 
 			table
 				tbody
