--- a/source/scss/blocks/features.scss
+++ b/source/scss/blocks/features.scss
@@ -1,6 +1,7 @@
 .features {
 	padding: 80px 0;
 	background-color: $color-default-black;
+	overflow: hidden;
 
 	@include media(lg) {
 		padding: 150px 0 120px;
