--- a/source/scss/blocks/first-banner.scss
+++ b/source/scss/blocks/first-banner.scss
@@ -23,7 +23,8 @@
 	&__image {
 		position: absolute;
 		top: 0;
-		left: 0;
+		left: 50%;
+		transform: translateX(-50%);
 		/*right: 0;
 		bottom: 0;*/
 
