--- a/source/scss/blocks/hero.scss
+++ b/source/scss/blocks/hero.scss
@@ -7,7 +7,7 @@
 	padding-top: 80px;
 	//background-size: cover;
 	//background-position: 50% 0;
-	overflow: hidden;
+	//overflow: hidden;
 	z-index: 0;
 
 	@include media(sm) {
@@ -23,9 +23,17 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		//transform: translateX(-50%);
 		width: 100%;
+		height: 100%;
 		z-index: -1;
+		overflow: hidden;
+
+		.parallax-bg {
+			position: absolute;
+			top: 0;
+			left: 50%;
+			transform: translateX(-50%);
+		}
 	}
 
 	&__container {
