--- a/source/scss/blocks/parallax-bg.scss
+++ b/source/scss/blocks/parallax-bg.scss
@@ -1,13 +1,18 @@
 .parallax-bg {
 	width: 100%;
+	min-width: 1000px;
 	min-height: 100%;
+
+	@include media(sm) {
+		min-width: 1200px;
+	}
 
 	img {
 		position: relative;
 		left: 50%;
 		transform: translateX(-50%);
 		display: block;
-		width: auto;
-		min-height: 100%;
+		width: 100%;
+		height: auto;
 	}
 }
