--- a/source/pug/service-detail.pug
+++ b/source/pug/service-detail.pug
@@ -29,37 +29,39 @@ block content
 				.carousel-section__carousel.carousel.carousel--slide-auto.swiper-container.__js_carousel-latest-projects(data-aos="fade-up")
 					.swiper-wrapper
 						a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
-							picture
-								source(type="image/webp" srcset="img/picture/carousel/8.webp 1x, img/picture/carousel/8@2x.webp 2x")
-								// 1х: 720px; 2x: 1440px
-								img(src="img/picture/carousel/8.jpg", srcset="img/picture/carousel/8@2x.jpg 2x", width="720", height="548", alt="swiss typography")
+							span.project-preview__image
+								picture
+									source(type="image/webp" srcset="img/picture/carousel/8.webp 1x, img/picture/carousel/8@2x.webp 2x")
+									img(src="img/picture/carousel/8.jpg", srcset="img/picture/carousel/8@2x.jpg 2x", width="720", height="548", alt="swiss typography")
 							span.project-preview__bottom
 								span.project-preview__title Swiss typography
 								span.project-preview__icon
 									+icon('link-arrow2')(width="24" height="23")
 						a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
-							picture
-								source(type="image/webp" srcset="img/picture/carousel/9.webp 1x, img/picture/carousel/9@2x.webp 2x")
-								// 1х: 334px; 2x: 668px
-								img(src="img/picture/carousel/9.jpg", srcset="img/picture/carousel/9@2x.jpg 2x", width="334", height="255", alt="the act")
+							span.project-preview__image
+								picture
+									source(type="image/webp" srcset="img/picture/carousel/9.webp 1x, img/picture/carousel/9@2x.webp 2x")
+									img(src="img/picture/carousel/9.jpg", srcset="img/picture/carousel/9@2x.jpg 2x", width="334", height="255", alt="the act")
 							span.project-preview__bottom
 								span.project-preview__title The act
 								span.project-preview__icon
 									+icon('link-arrow2')(width="24" height="23")
 						a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
-							picture
-								source(type="image/webp" srcset="img/picture/carousel/10.webp 1x, img/picture/carousel/10@2x.webp 2x")
-								// 1х: 404px; 2x: 808px
-								img(src="img/picture/carousel/10.jpg", srcset="img/picture/carousel/10@2x.jpg 2x", width="404", height="494", alt="Copenhagen")
+							span.project-preview__image
+								picture
+									source(type="image/webp" srcset="img/picture/carousel/10.webp 1x, img/picture/carousel/10@2x.webp 2x")
+									// 1х: 404px; 2x: 808px
+									img(src="img/picture/carousel/10.jpg", srcset="img/picture/carousel/10@2x.jpg 2x", width="404", height="494", alt="Copenhagen")
 							span.project-preview__bottom
 								span.project-preview__title Copenhagen
 								span.project-preview__icon
 									+icon('link-arrow2')(width="24" height="23")
 						a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
-							picture
-								source(type="image/webp" srcset="img/picture/carousel/11.webp 1x, img/picture/carousel/11@2x.webp 2x")
-								// 1х: 662px; 2x: 1324px
-								img(src="img/picture/carousel/11.jpg", srcset="img/picture/carousel/11@2x.jpg 2x", width="434", height="321", alt="Mobile app")
+							span.project-preview__image
+								picture
+									source(type="image/webp" srcset="img/picture/carousel/11.webp 1x, img/picture/carousel/11@2x.webp 2x")
+									// 1х: 662px; 2x: 1324px
+									img(src="img/picture/carousel/11.jpg", srcset="img/picture/carousel/11@2x.jpg 2x", width="434", height="321", alt="Mobile app")
 							span.project-preview__bottom
 								span.project-preview__title Mobile app
 								span.project-preview__icon
