--- a/source/pug/modules/hero.pug
+++ b/source/pug/modules/hero.pug
@@ -3,7 +3,7 @@ section.hero
 		.parallax-bg
 			picture
 				source(type="image/webp" srcset="img/picture/home/hero.webp 1x, img/picture/home/hero@2x.webp 2x")
-				img(src="img/picture/home/hero.jpg", srcset="img/picture/hero@2x.jpg 2x", width="1920", height="1318", alt="")
+				img(src="img/picture/home/hero.jpg", srcset="img/picture/home/hero@2x.jpg 2x", width="1920", height="1318", alt="")
 	.hero__container.container-fluid
 		header.hero__header
 			h1.hero__title
