--- a/source/pug/services.pug
+++ b/source/pug/services.pug
@@ -28,9 +28,10 @@ block content
 					- let classes = addCl + ' ' + item.bootstrapCl;
 					.services__item(class= classes, data-aos="fade-up")
 						a.service-preview(href= URLS.pages.serviceDetail)
-							picture
-								source(type="image/webp" srcset="img/picture/services/" + item.image.url + ".webp 1x, img/picture/services/" + item.image.url + "@2x.webp 2x")
-								img(src="img/picture/services/" + item.image.url + ".jpg", srcset="img/picture/services/" + item.image.url + "@2x.jpg 2x", width= item.image.w, height= item.image.h, alt= item.text)
+							span.service-preview__image
+								picture
+									source(type="image/webp" srcset="img/picture/services/" + item.image.url + ".webp 1x, img/picture/services/" + item.image.url + "@2x.webp 2x")
+									img(src="img/picture/services/" + item.image.url + ".jpg", srcset="img/picture/services/" + item.image.url + "@2x.jpg 2x", width= item.image.w, height= item.image.h, alt= item.text)
 							span.service-preview__caption!= item.text
 
 
