--- a/source/scss/blocks/first-banner.scss
+++ b/source/scss/blocks/first-banner.scss
@@ -28,11 +28,11 @@
 		/*right: 0;
 		bottom: 0;*/
 
-		img {
+		/*img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
-		}
+		}*/
 	}
 
 	h1 {
