--- a/source/pug/modules/contact-section.pug
+++ b/source/pug/modules/contact-section.pug
@@ -26,4 +26,4 @@ section.contact-section
 						label.contact-section__field.contact-section__field--textarea.field.field--theme-white(data-aos="fade-up")
 							textarea(name="message", required)
 							span.field__hint Message
-						+btn(true, 'Submit', '', 'contact-section__send')(type="submit", data-aos="fade-up")
+						+btn(true, 'Submit', '', 'btn--hover-white contact-section__send')(type="submit", data-aos="fade-up")
