--- a/source/pug/modules/plans-section.pug
+++ b/source/pug/modules/plans-section.pug
@@ -9,6 +9,7 @@ section.plans-section
 						li.yellow(data-aos="fade-up") Gathered day, years she'd upon, greater.
 						li(data-aos="fade-up") Kind cattle won't bearing.
 						li(data-aos="fade-up") own night two above.
+					+btn(false, 'join now', '#', 'card-price__btn')(data-aos="fade-up")
 			.plans-section__item.card-price.card-price--gradient.col-12.col-sm-6.col-lg-4(data-aos="fade-up")
 				.card-price__wrapper
 					.card-price__plan(data-aos="fade-up") Standard
