--- a/source/pug/pricing.pug
+++ b/source/pug/pricing.pug
@@ -22,6 +22,7 @@ block content
 							li.yellow(data-aos="fade-up") Gathered day, years she'd upon, greater.
 							li(data-aos="fade-up") Kind cattle won't bearing.
 							li(data-aos="fade-up") own night two above.
+						+btn(false, 'join now', '#', 'card-price__btn')(data-aos="fade-up")
 				section.card-price.card-price--gradient.pricing__card.col-12.col-lg-4(data-aos="fade-up")
 					.card-price__wrapper
 						.card-price__plan(data-aos="fade-up") Standard
@@ -48,6 +49,7 @@ block content
 							li.yellow(data-aos="fade-up") Gathered day, years she'd upon, greater.
 							li(data-aos="fade-up") Kind cattle won't bearing.
 							li(data-aos="fade-up") own night two above.
+						+btn(false, 'join now', '#', 'card-price__btn')(data-aos="fade-up")
 				section.card-price.card-price--yellow.pricing__card.col-12.col-lg-4(data-aos="fade-up")
 					.card-price__wrapper
 						.card-price__plan(data-aos="fade-up") Support
