--- a/source/pug/tooltip-projects.pug
+++ b/source/pug/tooltip-projects.pug
@@ -6,6 +6,8 @@ block variables
 	- let currentSection = 1; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
 	- let headerClasses = 'header--absolute header--separator header--white header--bg-black __js_fixed-header';
 
+	- let bodyModClass = 'webpage--bg-black';
+
 block header
 	include modules/header
 
