--- a/source/scss/blocks/partners.scss
+++ b/source/scss/blocks/partners.scss
@@ -28,7 +28,18 @@
 	}
 
 	&__item {
-		margin-bottom: 24px;
+		margin-bottom: 56px;
+		text-align: center;
+
+		&:nth-last-child(-n + 2) {
+			@include media(sm) {
+				margin-bottom: 0;
+			}
+		}
+
+		@include media(lg) {
+			margin-bottom: 0;
+		}
 
 		img {
 		}
