дорабатывает vertical-projects

--- a/source/pug/vertical-projects.pug
+++ b/source/pug/vertical-projects.pug
@@ -4,7 +4,7 @@ block variables
 	- let isHome = false; //- Если true то логотип не будет ссылкой
 	- let currentPage = 1.05; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 1; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
-	//- let headerClasses = 'header--yellow';
+	- let headerClasses = 'header--absolute';
 	//- let socialModClass = '';
 	//- let navigationModClass = 'navigation--hover-white';
 	- let isLeftwardHeader = true;
