--- a/source/pug/modules/projects-listing.pug
+++ b/source/pug/modules/projects-listing.pug
@@ -2,14 +2,20 @@ section.projects-listing
 	.projects-listing__container.container
 		h1.visually-hidden Projects
 
+		.projects-listing__aside
+			.projects-listing__aside-left
+				.projects-listing__category.d-none= VERTICAL_PROJECTS[0].category ? VERTICAL_PROJECTS[0].category : ''
+				h2.projects-listing__title!= VERTICAL_PROJECTS[0].title
+			+arrow-link('', URLS.projects.single, 'projects-listing__more')
+
 		ul.projects-listing__list
-			each item in VERTICAL_PROJECTS
-				li.projects-listing__item.project-card.row.g-0
+			each item, index in VERTICAL_PROJECTS
+				li.projects-listing__item.project-card.row.g-0(class= "QQ-" + index, data-title= item.title, data-category= item.category ? item.category : "", data-url= URLS.projects.single)
 					a.project-card__image.col-12.col-md-6.col-lg-7(href= URLS.projects.single, data-aos="fade-up")
 						picture
 							source(type="image/webp", srcset="img/picture/vertical-projects/" + item.image + ".webp 1x, img/picture/vertical-projects/" + item.image + "@2x.webp 2x")
 							img(src="img/picture/vertical-projects/" + item.image + ".jpg", srcset="img/picture/vertical-projects/" + item.image + "@2x.jpg 2x", width="908", height="976", alt="project photo")
-					.project-card__main.col-12.col-md-6.col-lg-5.order-md-first
+					//-.project-card__main.col-12.col-md-6.col-lg-5.order-md-first
 						.project-card__main-left
 							if item.category
 								a.project-card__category(href= URLS.projects.masonry, data-aos="fade-up")= item.category
