--- a/source/scss/blocks/project-card.scss
+++ b/source/scss/blocks/project-card.scss
@@ -1,7 +1,7 @@
 .project-card {
 	&__image {
 		display: block;
-		margin-bottom: 40px;
+		//margin-bottom: 40px;
 		overflow: hidden;
 		padding: 0 !important;
 
