--- a/source/scss/blocks/projects-listing.scss
+++ b/source/scss/blocks/projects-listing.scss
@@ -6,11 +6,103 @@
 	}
 
 	&__container {
+		position: relative;
 		max-width: $width--non-standard;
 
 		@include media(xl) {
 			padding-left: 42px;
-			transform: translateX(50px);
+			left: 50px;
+		}
+	}
+
+	&__aside {
+		position: fixed;
+		z-index: 1;
+		left: 0;
+		right: 0;
+		bottom: 0;
+
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		padding: 12px 15px;
+		background-color: $color-default-white;
+
+		@include media(md) {
+			position: absolute;
+			top: 0;
+			left: 12px;
+			right: auto;
+			bottom: auto;
+			padding: 0;
+
+			@include transition(transform);
+		}
+
+		@include media(xl) {
+			left: 42px;
+		}
+
+		&-left {
+			width: calc(100% - 72px);
+			margin-right: 24px;
+
+			@include media(md) {
+				width: 100%;
+				margin-right: 0;
+				margin-bottom: 24px;
+			}
+
+			@include media(lg) {
+				margin-bottom: 72px;
+			}
+		}
+	}
+
+	&__category {
+		display: inline-block;
+
+		& + * {
+			margin-top: 12px !important;
+		}
+
+		@include text(15px, 21 / 15, $color-default-black);
+		text-transform: uppercase;
+
+		@include transition(color);
+
+		@include hover {
+			color: $color-yellow;
+		}
+	}
+
+	&__title {
+		margin: 0;
+
+		@include text(32px, 95 / 100, $color-default-black);
+		font-weight: 500;
+
+		@include media(md) {
+			font-size: 64px;
+		}
+
+		@include media(xl) {
+			font-size: 100px;
+		}
+
+		span {
+			@include media(md) {
+				display: block;
+			}
+		}
+	}
+
+	&__more {
+		//margin-left: 20px;
+		flex-shrink: 0;
+
+		@include media(md) {
+			margin-left: 0;
 		}
 	}
 
