--- a/source/scss/blocks/service-preview.scss
+++ b/source/scss/blocks/service-preview.scss
@@ -2,7 +2,12 @@
 	$self: &;
 
 	position: relative;
-	display: block;
+	display: flex;
+	flex-direction: column;
+
+	@include media-max(lg) {
+		width: 100%;
+	}
 
 	@include media(lg) {
 		display: inline-block;
@@ -24,20 +29,32 @@
 		display: inline-block;
 		vertical-align: top;
 		overflow: hidden;
-	}
 
-	img {
-		display: block;
-		width: 100%;
-		height: auto;
+		img {
+			display: block;
+			width: 100%;
+			height: auto;
 
-		@include transition(transform);
+			@include transition(transform);
 
-		@include media(lg) {
-			display: inline-block;
-			vertical-align: top;
-			width: auto;
-			max-width: 100%;
+			@include media(lg) {
+				display: inline-block;
+				vertical-align: top;
+				width: auto;
+				max-width: 100%;
+			}
+		}
+
+		@include media-max(lg) {
+			display: block;
+			height: 300px;
+
+			img {
+				display: block;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
 		}
 	}
 
@@ -53,6 +70,10 @@
 
 		br {
 			display: none;
+		}
+
+		@include media-max(lg) {
+			flex-grow: 1;
 		}
 
 		@include media(lg) {
